added new headers

--- a/finalproject.html
+++ b/finalproject.html
@@ -44,7 +44,8 @@
 <body>
 
 <div class="header">
-  <h1>Chania</h1>
+  <h1>Simone M. Obasuyi</h1>
+  <h2>Resume Portfolio</h2>
 </div>
 
 <div class="clearfix">
