--- a/finalproject.html
+++ b/finalproject.html
@@ -45,28 +45,31 @@
 
 <div class="header">
   <h1>Simone M. Obasuyi</h1>
-  <h2>Resume Portfolio</h2>
+  <h2>Portfolio</h2>
 </div>
 
 <div class="clearfix">
   <div class="column menu">
     <ul>
-      <li>The Flight</li>
-      <li>The City</li>
-      <li>The Island</li>
-      <li>The Food</li>
+      <li>About</li>
+      <li>Resume</li>
+      <li>Work</li>
     </ul>
   </div>
 
   <div class="column content">
-    <h1>The City</h1>
-    <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-    <p>You will learn more about web layout and responsive web pages in a later chapter.</p>
+    <h1>About</h1>
+    <p>
+    </p>
   </div>
 </div>
 
 <div class="footer">
-  <p>Footer Text</p>
+  <h1>Social</h1>
+    <ul>
+      <li>Instagram</li>
+      <li>Twitter</li>
+      <li>Facebook</li>
 </div>
 
 </body>
