--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -102,7 +102,7 @@
           <aside class="col-md-4 blog-sidebar">
             <div class="p-3 mb-3 bg-light rounded">
               <h4 class="font-italic">About</h4>
-              <p class="mb-0"><em>Simone Obasuyi</em> is a </p>
+              <p class="mb-0"><em>Simone Obasuyi</em> is a person who is eager to discover the many stories of the world and transcend them to audiences. With her knowledge of different mediums, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
             </div>
 
             <div class="p-3">
