--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -7,8 +7,9 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-  <title>Simone M. Obasuyi's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="css/final.css">
+  
+    <title>Simone M. Obasuyi's Portfolio</title>
 </head>
   <body>
 
@@ -67,17 +68,13 @@
         <div class="row">
           <div class="col-md-8 blog-main">
             <div class="blog-post">
-              <h2 class="blog-post-title">Sample blog post</h2>
-              <p class="blog-post-meta">subtitle<a href="#">Mark</a></p>
+              <h2 class="blog-post-title">Here's some of Simone's past work...</h2>
+              <p class="blog-post-meta"></p>
 
-              <p></p>
-              <ul>
-                <li>something</li>
-                <li>something</li>
-                <li>something</li>
-              </ul>
-              <p></p>
-            </div><!-- /.blog-post -->
+              <p>
+              <iframe width="400" height="300" src="https://www.youtube.com/embed/26jhow5_iG0"></iframe>
+              <iframe width="400" height "400" src="https://www.youtube.com/embed/aHHJ1C-9TP0"></iframe>
+              </p>
 
             <div class="blog-post">
               <h2 class="blog-post-title">Another blog post</h2>
@@ -88,7 +85,7 @@
 
             <div class="blog-post">
               <h2 class="blog-post-title">New feature</h2>
-              <p class="blog-post-meta">Blog Post <a href="#">Chris</a></p>
+              <p class="blog-post-meta">Blog Post <a href="#"></a></p>
 
             </div><!-- /.blog-post -->
 
