--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -7,8 +7,8 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/final.css">
-  
+  <link rel="stylesheet" type="text/css" href="final.css">
+
     <title>Simone M. Obasuyi's Portfolio</title>
 </head>
   <body>
@@ -27,10 +27,10 @@
 
         <div class="nav-scroller py-1 mb-2">
           <nav class="nav d-flex justify-content-between">
-            <a class="p-2 text-muted" href="#">About</a>
-            <a class="p-2 text-muted" href="#">Resume</a>
-            <a class="p-2 text-muted" href="#">Work</a>
-            <a class="p-2 text-muted" href="#">Goals</a>
+            <a class="p-2 text-muted" href="simonesabout.html">About</a>
+            <a class="p-2 text-muted" href="simonesresume.html">Resume</a>
+            <a class="p-2 text-muted" href="simoneswork.html">Work</a>
+            <a class="p-2 text-muted" href="simonesgoals.html">Goals</a>
           </nav>
         </div>
 
@@ -105,12 +105,17 @@
             <div class="p-3">
               <h4 class="font-italic">Social</h4>
               <ol class="list-unstyled">
-                <li><a href="#">Youtube</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Youtube: Simone Obasuyi</a></li><li><a href="#">Twitter: @simonemobasuyi</a></li>
+                <li><a href="#">Facebook</a></li><li><a href="#">Instagram</a></li>
               </ol>
             </div>
+            <div class="Instagram">
+  <span class="Instagram-strip"></span>
+  <span class="Instagram-viewfinder"></span>
+  <span class="Instagram-shadow"></span>
+  <span class="Instagram-lens"></span>
+</div>
+
           </aside><!-- /.blog-sidebar -->
 
         </div><!-- /.row -->
