--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -35,17 +35,17 @@
         </div>
 
         <div class="row mb-2">
-          <div class="col-md-6">
+          <div class="col-md-6 ">
             <div class="card flex-md-row mb-4 box-shadow h-md-250">
               <div class="card-body d-flex flex-column align-items-start">
                 <strong class="d-inline-block mb-2 text-primary">Write something bold here</strong>
                 <h3 class="mb-0">
                   <a class="text-dark" href="#">Featured post</a>
                 </h3>
-                  <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text mb-auto"><em>Simone Obasuyi</em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different mediums, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. <p>
                 <a href="#">Continue reading</a>
               </div>
-              <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" style="width: 200px; height: 250px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1633d12501a%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1633d12501a%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2256.203125%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+              
             </div>
           </div>
           <div class="col-md-6">
@@ -55,7 +55,16 @@
                 <h3 class="mb-0">
                   <a class="text-dark" href="#">Post title</a>
                 </h3>
-                <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text mb-auto">
+                <div class="p-3">
+                  <h4 class="font-italic">Social</h4>
+                  <ol class="list-unstyled">
+                    <li><a href="#">Youtube: Simone Obasuyi</a></li>
+                    <li><a href="#"> Twitter: @simonemobasuyi</a></li>
+                    <li><a href="#">Instagram</a></li>
+                  </ol>
+                </div>
+              </p>
                 <a href="#">Continue reading</a>
               </div>
               <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1633d12501e%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1633d12501e%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2256.203125%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 200px; height: 250px;">
@@ -63,71 +72,6 @@
           </div>
         </div>
       </div>
-
-      <main role="main" class="container">
-        <div class="row">
-          <div class="col-md-8 blog-main">
-            <div class="blog-post">
-              <h2 class="blog-post-title">Here's some of Simone's past work...</h2>
-              <p class="blog-post-meta"></p>
-
-              <p>
-              <iframe width="400" height="300" src="https://www.youtube.com/embed/26jhow5_iG0"></iframe>
-              <iframe width="400" height "400" src="https://www.youtube.com/embed/aHHJ1C-9TP0"></iframe>
-              </p>
-
-            <div class="blog-post">
-              <h2 class="blog-post-title">Another blog post</h2>
-              <p class="blog-post-meta">subtitle<a href="#">Jacob</a></p>
-
-              <p></p>
-            </div><!-- /.blog-post -->
-
-            <div class="blog-post">
-              <h2 class="blog-post-title">New feature</h2>
-              <p class="blog-post-meta">Blog Post <a href="#"></a></p>
-
-            </div><!-- /.blog-post -->
-
-            <nav class="blog-pagination">
-              <a class="btn btn-outline-primary" href="#">Older</a>
-              <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-            </nav>
-
-          </div><!-- /.blog-main -->
-
-          <aside class="col-md-4 blog-sidebar">
-            <div class="p-3 mb-3 bg-light rounded">
-              <h4 class="font-italic">About</h4>
-              <p class="mb-0"><em>Simone Obasuyi</em> is a person who is eager to discover the many stories of the world and transcend them to audiences. With her knowledge of different mediums, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
-            </div>
-
-            <div class="p-3">
-              <h4 class="font-italic">Social</h4>
-              <ol class="list-unstyled">
-                <li><a href="#">Youtube: Simone Obasuyi</a></li><li><a href="#">Twitter: @simonemobasuyi</a></li>
-                <li><a href="#">Facebook</a></li><li><a href="#">Instagram</a></li>
-              </ol>
-            </div>
-            <div class="Instagram">
-  <span class="Instagram-strip"></span>
-  <span class="Instagram-viewfinder"></span>
-  <span class="Instagram-shadow"></span>
-  <span class="Instagram-lens"></span>
-</div>
-
-          </aside><!-- /.blog-sidebar -->
-
-        </div><!-- /.row -->
-
-      </main><!-- /.container -->
-
-      <footer class="blog-footer">
-        <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        <p>
-          <a href="#">Back to top</a>
-        </p>
-      </footer>
 
       <!-- Bootstrap core JavaScript
       ================================================== -->
