--- a/simonesresume.html
+++ b/simonesresume.html
@@ -21,27 +21,11 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Resume</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
         </div>
       </div>
     </nav>
@@ -76,28 +60,96 @@
           <hr>
 
           <!-- Post Content -->
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+          <p class="lead">
+            <p>Here is my resume:</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+<p>Simone M. Obasuyi</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+<p>Follow Me on Twitter & Instagram: @simonemobasuyi</p>
 
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">Someone famous in
-              <cite title="Source Title">Source Title</cite>
-            </footer>
-          </blockquote>
+<p>EDUCATION</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+<p>University of Texas at Austin – Moody School of Communication</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+<p>Bachelor’s Degree – Journalism – May 2018</p>
 
-          <hr>
+<p>CONTENT-RELEVANT COURSES</p>
 
-          <!-- Comments Form -->
-          <div class="card my-4">
-            <h5 class="card-header">Leave a Comment:</h5>
+<p>Social Media Journalism</p>
+
+<p>Digital Story-Telling</p>
+
+<p>Psychology of Advertising</p>
+
+<p>Media Law</p>
+
+<p>Coding for Journalist</p>
+
+<p>COMMUNICATIONS & MEDIA EXPERIENCE</p>
+
+<p>AT&T Headquarters, Dallas, Texas – June 2015 – August 2017</p>
+
+<ol>
+  <li>Worked with External Communications Team</li>
+  <li>Strategized and Constructed Internal PR Campaign for AT&T’s GigaPower</li>
+  <li>Communicated with Designated Marketing Locations</li>
+  <li>Established Sustainability & Grew Bigger Market</li>
+</ol>
+
+<p>Social Media: Twitter, Facebook, Instagram, Snapchat</p>
+  <ol>
+    <li>Tracked Hashtag Activity and Tweet Analytics</li>
+    <li>Programmed Post Prior to Work Week</li>
+    <li>Ran Social Accounts Weekly</li>
+    <li>Final Cut & Adobe Premiere Pro</li>
+  </ol>
+
+<p>Texas Student Media: The Xsclusive-Twitter, Youtube and Snapchat</p>
+  <ol>
+    <li>Floor Manager</li>
+    <li>Show Correspondent & Host</li>
+    <li>Twitter</li>
+    <li>Editing</li>
+  </ol>
+
+<p>SUMMARY OF SKILLS</p>
+<ol>
+  <li>Microsoft Office Suite: Proficient</li>
+  <li>Google Suite: Experienced</li>
+  <li>Blogging: Proficient WordPress, Storify, Infogram, Wix, Blogspot</li>
+  <li>Video Editing Software: with Premiere Pro & Final Cut</li>
+</ol>
+
+<p>ASSOCIATIONS/AFFILIATIONS</p>
+
+<ol>
+<p>National Association of Black Journalists, Austin, Texas, August 2016-Present</p>
+<ol>
+  <li>University of Texas at Austin Chapter</li>
+
+<p>Fearless Leadership Mentorship Program, Austin, Texas, January 2016-Present</p>
+<ol>
+  <li>Leadership & Professional Etiquette</li>
+  <li>Women Empowerment</li>
+</ol>
+
+<p>Emmett J. Conrad Leadership Program, Dallas, Texas, January 2015-Present</p>
+
+<ol>
+  <li>Internship with AT&T</li>
+  <li>Leadership & Community Outreach Activities</li>
+<ol>
+
+<p>University Fashion Group, Austin, Texas, January 2016-May 2016</p>
+<ol>
+  <li>Event Coordinating Committee</li>
+  <li>Public Relations Committee</li>
+  <li>Show Production Team</li>
+</ol>
+<hr>
+<!-- Comments Form -->
+    <div class="card my-4">
+          <h5 class="card-header">Leave a Comment:</h5>
             <div class="card-body">
               <form>
                 <div class="form-group">
@@ -215,7 +267,6 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright © Your Website 2018</p>
       </div>
       <!-- /.container -->
     </footer>
