--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -4,9 +4,17 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="final.css">
 
     <title>Simone M. Obasuyi's Portfolio</title>
@@ -14,8 +22,7 @@
   <body>
 
       <div class="container">
-        <header class="blog-header py-3">
-        </header>
+        <header class="blog-header py3">
 
         <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
           <div class="col-md-6 px-0">
@@ -45,23 +52,19 @@
                   <p class="card-text mb-auto"><em>Simone Obasuyi</em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different mediums, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. <p>
                 <a href="#">Continue reading</a>
               </div>
-              
+
             </div>
           </div>
           <div class="col-md-6">
             <div class="card flex-md-row mb-4 box-shadow h-md-250">
               <div class="card-body d-flex flex-column align-items-start">
-                <strong class="d-inline-block mb-2 text-success">Design</strong>
-                <h3 class="mb-0">
-                  <a class="text-dark" href="#">Post title</a>
-                </h3>
-                <p class="card-text mb-auto">
+               <p class="card-text mb-auto">
                 <div class="p-3">
                   <h4 class="font-italic">Social</h4>
                   <ol class="list-unstyled">
-                    <li><a href="#">Youtube: Simone Obasuyi</a></li>
-                    <li><a href="#"> Twitter: @simonemobasuyi</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCSBnAFi1CzQPEccCCrGnJ4g?view_as=subscriber">Youtube: Simone Obasuyi</a></li>
+                    <li><a href="https://twitter.com/simonemobasuyi"> Twitter: @simonemobasuyi</a></li>
+                    <li><a href="https://www.instagram.com/simonemobasuyi/">Instagram</a></li>
                   </ol>
                 </div>
               </p>
