added new stylesheet

--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" type="text/css" href="final.css">
 
     <title>Simone M. Obasuyi's Portfolio</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+      
 </head>
   <body>
 
