--- a/simonesabout.html
+++ b/simonesabout.html
@@ -44,8 +44,8 @@
           <img class="wordpress" src="https://simoneobasuyi.files.wordpress.com/2015/01/img_0900-e1510213095697.jpg?w=463&h=619" alt="">
 
           <hr>
-
-          <p>Simone M. Obasuyi was born and raised in Dallas, Texas in June of 1996. Her entire life she has had a passion for entertainment and all things creative. Throughout her time in college as a communication student she has learned that she’s in love with creating powerful messages that inspire people of all facets. With the evolution of technology and social media throughout her childhood to her adult-life, she has adapted by continuing to learn and harbor new crafts. On this journey Simone has gone through transformations within her life and her writing that enables her to clearly articulate messages that elevate others to a higher thinking. I hope you enjoy reading her entries. </p>
+          <div class="aboutinfo">
+          <p>Simone M. Obasuyi was born and raised in Dallas, Texas in June of 1996. Her entire life she has had a passion for entertainment and all things creative. Throughout her time in college as a communication student she has learned that she’s in love with creating powerful messages that inspire people of all facets. With the evolution of technology and social media throughout her childhood to her adult-life, she has adapted by continuing to learn and harbor new crafts. On this journey Simone has gone through transformations within her life and her writing that enables her to clearly articulate messages that elevate others to a higher thinking. I hope you enjoy reading her entries. </p> </div>
           <footer class="blockquote-footer">SMO.</footer>
           <blockquote class="blockquote">
             <a href="http://simonemobasuyi.com/">Check out Simone's Blog on simonemobasuyi.com</a>
@@ -91,20 +91,20 @@
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      <a href="#">Twitter</a>
                     </li>
                     <li>
-                      <a href="#">HTML</a>
+                      <a href="#">Instagram</a>
                     </li>
                     <li>
-                      <a href="#">Freebies</a>
+                      <a href="#">Youtube</a>
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">JavaScript</a>
+                      <a href="#"></a>
                     </li>
                     <li>
                       <a href="#">CSS</a>
