--- a/simonesresume.html
+++ b/simonesresume.html
@@ -58,19 +58,19 @@
 
           <!-- Post Content -->
           <p class="lead">
-            <p>Here is my resume:</p>
+            <p><strong>Here is my resume:</strong></p>
 
 <p>Simone M. Obasuyi</p>
 
 <p>Follow Me on Twitter & Instagram: @simonemobasuyi</p>
 
-<p>EDUCATION</p>
+<p><strong>EDUCATION</strong></p>
 
 <p>University of Texas at Austin – Moody School of Communication</p>
 
 <p>Bachelor’s Degree – Journalism – May 2018</p>
 
-<p>CONTENT-RELEVANT COURSES</p>
+<p><strong>CONTENT-RELEVANT COURSES</strong></p>
 
 <p>Social Media Journalism</p>
 
@@ -82,7 +82,7 @@
 
 <p>Coding for Journalist</p>
 
-<p>COMMUNICATIONS & MEDIA EXPERIENCE</p>
+<p><strong>COMMUNICATIONS & MEDIA EXPERIENCE</strong></p>
 
 <p>AT&T Headquarters, Dallas, Texas – June 2015 – August 2017</p>
 
