--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -52,7 +52,7 @@
                 <h3 class="mb-0">
                   <a class="text-dark" href="#">At a Glance...</a>
                 </h3>
-                  <p class="card-text mb-auto"><em>Simone Obasuyi</em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different mediums, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
+                  <p class="card-text mb-auto"><em>Simone Obasuyi</em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different media, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
               </div>
 
 
