--- a/simonesabout.html
+++ b/simonesabout.html
@@ -24,7 +24,14 @@
         <a class="navbar-brand" href="#">About</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
+        </a>
         </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="FinalProjectPortfolio.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
       </div>
     </nav>
 
