--- a/FinalProjectPortfolio.html
+++ b/FinalProjectPortfolio.html
@@ -28,7 +28,7 @@
         <header class="blog-header py3">
 
         <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-          <p class="topjt-0"><img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/31946535_2073494572889828_6272184176800169984_n.jpg?_nc_cat=0&oh=039f07433a70fc5eb8b1424a785a8b7a&oe=5B987B78"
+          <p class="topjt-0"><img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/31946535_2073494572889828_6272184176800169984_n.jpg?_nc_cat=0&oh=039f07433a70fc5eb8b1424a785a8b7a&oe=5B987B78">
           <div class="col-md-6-offset-6 px-0">
             <h1 class="display-4 font-italic">Simone M. Obasuyi's Portfolio</h1>
             <p class="lead my-3">Discover the best of Simone's work and skills.</p>
@@ -41,7 +41,6 @@
             <a class="p-2 text-muted" href="simonesabout.html">About</a>
             <a class="p-2 text-muted" href="simonesresume.html">Resume</a>
             <a class="p-2 text-muted" href="simoneswork2.html">Work</a>
-            <a class="p-2 text-muted" href="simonesgoals.html">Goals</a>
           </nav>
         </div>
 
@@ -52,7 +51,8 @@
                 <h3 class="mb-0">
                   <a class="text-dark" href="#">At a Glance...</a>
                 </h3>
-                  <p class="card-text mb-auto"><em>Simone Obasuyi</em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different media, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
+                  <p class="card-text mb-auto"><em><strong>Simone Obasuyi<strong></em> is eager to help understand and communicate the depth of the stories we each hold. With her knowledge of different media, in which are platforms for these stories, she is able to communicate effectively so that the message can reach others. </p>
+                  <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/32084772_2073494396223179_568079690560962560_n.jpg?_nc_cat=0&oh=220a9f882e869db695a3a5485c081830&oe=5B9385A6">
               </div>
 
 
@@ -73,7 +73,8 @@
               </p>
 
               </div>
-              <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1633d12501e%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1633d12501e%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2256.203125%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 200px; height: 250px;">
+
+              <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb">
 
           </div>
           </div>
