creation of data table

--- a/simonesresume.html
+++ b/simonesresume.html
@@ -116,7 +116,54 @@
   <li>Blogging: Proficient WordPress, Storify, Infogram, Wix, Blogspot</li>
   <li>Video Editing Software: with Premiere Pro & Final Cut</li>
 </ol>
-
+<table id="example" class="display" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Name of Skill</th>
+                <th>Level of Experience</th>
+                <th>Platforms Used</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>Name of Skill</th>
+                <th>Level of Experience</th>
+                <th>Platforms Used</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>Microsoft Office Suite</td>
+                <td>Proficient</td>
+                <td>Documents-Excel</td>
+            </tr>
+            <tr>
+                <td>Google Suite</td>
+                <td>Experienced</td>
+                <td>Docs-Sheets</td>
+            </tr>
+            <tr>
+                <td>Blogging</td>
+                <td>Proficient</td>
+                <td>WordPress, Storify, Infogram, etc.</td>
+            </tr>
+            <tr>
+                <td>Video Editing</td>
+                <td>Intermediate</td>
+                <td>Premiere Pro & Final Cut</td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
+    <script>
+$(document).ready(function() {
+        $('#example').DataTable( {
+            "scrollY":        "200px",
+            "scrollCollapse": true,
+            "paging":         false
+        } );
+    } );
+</script>
 <p>ASSOCIATIONS/AFFILIATIONS</p>
 
 <ol>
