made final changes

--- a/simonesresume.html
+++ b/simonesresume.html
@@ -109,13 +109,7 @@
     <li>Editing</li>
   </ol>
 
-<p>SUMMARY OF SKILLS</p>
-<ol>
-  <li>Microsoft Office Suite: Proficient</li>
-  <li>Google Suite: Experienced</li>
-  <li>Blogging: Proficient WordPress, Storify, Infogram, Wix, Blogspot</li>
-  <li>Video Editing Software: with Premiere Pro & Final Cut</li>
-</ol>
+<p><strong>SUMMARY OF SKILLS<strong></p>
 <table id="example" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
@@ -124,13 +118,6 @@
                 <th>Platforms Used</th>
             </tr>
         </thead>
-        <tfoot>
-            <tr>
-                <th>Name of Skill</th>
-                <th>Level of Experience</th>
-                <th>Platforms Used</th>
-            </tr>
-        </tfoot>
         <tbody>
             <tr>
                 <td>Microsoft Office Suite</td>
@@ -152,6 +139,15 @@
                 <td>Intermediate</td>
                 <td>Premiere Pro & Final Cut</td>
             </tr>
+            <tr>
+                <td>Coding</td>
+                <td>Beginner</td>
+                <td>HTML, CSS, JavaScript & Jquery</td>
+            </tr>
+            <tr>
+                <td>Networking & Event Planning</td>
+                <td>Intermediate</td>
+                <td>Conrad Socials, GigaPower Networking Events, AT&T Bowling Night</td>
         </tbody>
     </table>
     <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
@@ -164,7 +160,8 @@ $(document).ready(function() {
         } );
     } );
 </script>
-<p>ASSOCIATIONS/AFFILIATIONS</p>
+
+<p><strong>ASSOCIATIONS/AFFILIATIONS</strong></p>
 
 <ol>
 <p>National Association of Black Journalists, Austin, Texas, August 2016-Present</p>
