--- a/simoneswork2.html
+++ b/simoneswork2.html
@@ -53,10 +53,8 @@
           <p>Take a look at some of my work. These are some of most recent projects that I worked on during my undergrad experience. I was fortunate enough to learn alot about the African American history at UT and famous African Americans that were being honored by UT, check out these videos. </p>
           <h3 class="my-3">Project Details</h3>
           <ul>
-            <li>Lorem Ipsum</li>
-            <li>Dolor Sit Amet</li>
-            <li>Consectetur</li>
-            <li>Adipiscing Elit</li>
+            <li>African Americans at UT</li>
+            <li>History of African Americans</li>
           </ul>
         </div>
       </div>
